# swagger/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/categories": {
+        "/api/v1/categories": {
             "get": {
                 "security": [
                     {
@@ -89,7 +89,7 @@
                 }
             }
         },
-        "/categories/{id}": {
+        "/api/v1/categories/{id}": {
             "get": {
                 "security": [
                     {
@@ -235,7 +235,7 @@
                 }
             }
         },
-        "/categories/{id}/products": {
+        "/api/v1/categories/{id}/products": {
             "get": {
                 "security": [
                     {
@@ -281,7 +281,7 @@
                 }
             }
         },
-        "/clients": {
+        "/api/v1/clients": {
             "get": {
                 "security": [
                     {
@@ -384,7 +384,7 @@
                 }
             }
         },
-        "/clients/{id}": {
+        "/api/v1/clients/{id}": {
             "get": {
                 "security": [
                     {
@@ -498,7 +498,7 @@
                 }
             }
         },
-        "/ingredients": {
+        "/api/v1/ingredients": {
             "get": {
                 "security": [
                     {
@@ -578,7 +578,7 @@
                 }
             }
         },
-        "/ingredients/{id}": {
+        "/api/v1/ingredients/{id}": {
             "get": {
                 "security": [
                     {
@@ -736,7 +736,7 @@
                 }
             }
         },
-        "/local_sales": {
+        "/api/v1/local_sales": {
             "get": {
                 "security": [
                     {
@@ -822,7 +822,7 @@
                 }
             }
         },
-        "/local_sales/{id}": {
+        "/api/v1/local_sales/{id}": {
             "get": {
                 "security": [
                     {
@@ -868,7 +868,7 @@
                 }
             }
         },
-        "/local_stock": {
+        "/api/v1/local_stock": {
             "get": {
                 "security": [
                     {
@@ -960,7 +960,7 @@
                 }
             }
         },
-        "/local_stock/{product_id}": {
+        "/api/v1/local_stock/{product_id}": {
             "get": {
                 "security": [
                     {
@@ -1006,7 +1006,7 @@
                 }
             }
         },
-        "/local_stock/{product_id}/adjust": {
+        "/api/v1/local_stock/{product_id}/adjust": {
             "patch": {
                 "security": [
                     {
@@ -1064,7 +1064,7 @@
                 }
             }
         },
-        "/orders": {
+        "/api/v1/orders": {
             "get": {
                 "security": [
                     {
@@ -1170,7 +1170,7 @@
                 }
             }
         },
-        "/orders/{id}": {
+        "/api/v1/orders/{id}": {
             "get": {
                 "security": [
                     {
@@ -1222,7 +1222,7 @@
                 }
             }
         },
-        "/orders/{id}/state": {
+        "/api/v1/orders/{id}/state": {
             "patch": {
                 "security": [
                     {
@@ -1291,7 +1291,7 @@
                 }
             }
         },
-        "/payment_methods": {
+        "/api/v1/payment_methods": {
             "get": {
                 "security": [
                     {
@@ -1371,7 +1371,7 @@
                 }
             }
         },
-        "/payment_methods/{id}": {
+        "/api/v1/payment_methods/{id}": {
             "get": {
                 "security": [
                     {
@@ -1467,7 +1467,7 @@
                 }
             }
         },
-        "/products": {
+        "/api/v1/products": {
             "get": {
                 "security": [
                     {
@@ -1547,7 +1547,7 @@
                 }
             }
         },
-        "/products/{id}": {
+        "/api/v1/products/{id}": {
             "get": {
                 "security": [
                     {
@@ -1705,7 +1705,7 @@
                 }
             }
         },
-        "/products/{productID}/ingredients": {
+        "/api/v1/products/{productID}/ingredients": {
             "post": {
                 "security": [
                     {
@@ -1763,7 +1763,7 @@
                 }
             }
         },
-        "/products/{productID}/ingredients/{ingredientID}": {
+        "/api/v1/products/{productID}/ingredients/{ingredientID}": {
             "delete": {
                 "security": [
                     {
@@ -1894,7 +1894,7 @@
                 }
             }
         },
-        "/providers": {
+        "/api/v1/providers": {
             "get": {
                 "security": [
                     {
@@ -1997,7 +1997,7 @@
                 }
             }
         },
-        "/providers/{id}": {
+        "/api/v1/providers/{id}": {
             "get": {
                 "security": [
                     {
@@ -2111,7 +2111,7 @@
                 }
             }
         },
-        "/tokens/authentication": {
+        "/api/v1/tokens/authentication": {
             "post": {
                 "description": "Creates a new authentication token for a user",
                 "consumes": [
@@ -2163,7 +2163,7 @@
                 }
             }
         },
-        "/users": {
+        "/api/v1/users": {
             "post": {
                 "description": "Creates a new user with a username, email, and password",
                 "consumes": [
@@ -2563,7 +2563,7 @@
         "api.registerPaymentMethodRequest": {
             "type": "object",
             "properties": {
-                "owner": {
+                "name": {
                     "type": "string"
                 },
                 "reference": {
@@ -2623,6 +2623,9 @@
                 "password": {
                     "type": "string"
                 },
+                "role": {
+                    "type": "string"
+                },
                 "username": {
                     "type": "string"
                 }
@@ -2643,6 +2646,9 @@
             "type": "object",
             "properties": {
                 "created_at": {
+                    "type": "string"
+                },
+                "deleted_at": {
                     "type": "string"
                 },
                 "description": {
@@ -2666,6 +2672,9 @@
                     "type": "string"
                 },
                 "cuit": {
+                    "type": "string"
+                },
+                "deleted_at": {
                     "type": "string"
                 },
                 "email": {
@@ -2705,6 +2714,9 @@
                 "created_at": {
                     "type": "string"
                 },
+                "deleted_at": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
@@ -2720,6 +2732,9 @@
             "type": "object",
             "properties": {
                 "created_at": {
+                    "type": "string"
+                },
+                "deleted_at": {
                     "type": "string"
                 },
                 "id": {
@@ -2794,10 +2809,16 @@
                 "client_id": {
                     "type": "integer"
                 },
+                "client_name": {
+                    "type": "string"
+                },
                 "created_at": {
                     "type": "string"
                 },
                 "date": {
+                    "type": "string"
+                },
+                "deleted_at": {
                     "type": "string"
                 },
                 "id": {
@@ -2835,6 +2856,9 @@
                 "product_id": {
                     "type": "integer"
                 },
+                "product_name": {
+                    "type": "string"
+                },
                 "quantity": {
                     "type": "integer"
                 }
@@ -2861,10 +2885,13 @@
                 "created_at": {
                     "type": "string"
                 },
+                "deleted_at": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
                 },
-                "owner": {
+                "name": {
                     "type": "string"
                 },
                 "reference": {
@@ -2885,6 +2912,12 @@
                     "type": "string"
                 },
                 "created_at": {
+                    "type": "string"
+                },
+                "current_stock": {
+                    "type": "number"
+                },
+                "deleted_at": {
                     "type": "string"
                 },
                 "description": {
@@ -2948,6 +2981,9 @@
                 "cuit": {
                     "type": "string"
                 },
+                "deleted_at": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
                 },
@@ -2971,11 +3007,20 @@
                 "created_at": {
                     "type": "string"
                 },
+                "deleted_at": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
+                },
+                "is_active": {
+                    "type": "boolean"
+                },
+                "role": {
+                    "type": "string"
                 },
                 "username": {
                     "type": "string"
